Modified Apple and Ubuntu icons.
The icons included with rEFInd don't fit my taste. I photoshopped
some and changed them to grayscale. I also disabled the banner and
arrows.

--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -6,7 +6,7 @@
 # Timeout in seconds for the main menu screen. Setting the timeout to 0
 # disables automatic booting (i.e., no timeout).
 #
-timeout 20
+timeout 5 
 
 # Screen saver timeout; the screen blanks after the specified number of
 # seconds with no keyboard input. The screen returns after most keypresses
@@ -30,6 +30,8 @@ timeout 20
 #
 #hideui singleuser
 #hideui all
+hideui banner
+hideui arrows
 
 # Set the name of a subdirectory in which icons are stored. Icons must
 # have the same names they have in the standard directory. The directory
